frontend/test/should_pass/redirect_003.grg
rule r {
	z:Node -e:Edge-> y:Node;
	x:Node;

	modify {
		z -e->! x;
	}
}

