frontend/test/should_fail/rhs_edge2_nested.grg
rule r
{
	x:Node;

	iterated {
		.;
		modify {
			y:Node -e-> y;
		}
	}

	modify {
		x -e:Edge-> x;
	}
}
